name:                 cryptobox-haskell
version:              0.0.1
synopsis:             Haskell bindings to cryptobox
author:               Toralf Wittner
maintainer:           Toralf Wittner <tw@dtex.org>
copyright:            (c) 2015 Toralf Wittner
homepage:             https://github.com/twittner/cryptobox-haskell/
bug-reports:          https://github.com/twittner/cryptobox-haskell/issues
license:              OtherLicense
license-file:         LICENSE
category:             System
build-type:           Simple
cabal-version:        >= 1.10

description:
    Haskell bindings to <https://github.com/romanb/cryptobox cryptobox>.

source-repository head
    type:             git
    location:         git://github.com/twittner/cryptobox.git

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs
    ghc-prof-options: -prof -auto-all
    exposed-modules:  System.CryptoBox
    extra-libraries:  cryptobox
    build-depends:
          base                 >= 4.5   && < 5.0
        , bytestring           >= 0.10  && < 1.0
        , hashable             >= 1.2   && < 2.0
        , unordered-containers >= 0.2.5 && < 1.0
