name:                 cryptobox-haskell
version:              0.1.0
synopsis:             Haskell bindings to cryptobox
author:               Wire Swiss GmbH
maintainer:           Wire Swiss GmbH <support@wire.com>
copyright:            (C) 2015 Wire Swiss GmbH
homepage:             https://github.com/wireapp/cryptobox-haskell/
bug-reports:          https://github.com/wireapp/cryptobox-haskell/issues
license:              GPL-3.0
license-file:         LICENSE
category:             System
build-type:           Simple
cabal-version:        >= 1.10

description:
    Haskell bindings to <https://github.com/wireapp/cryptobox cryptobox>.

source-repository head
    type:             git
    location:         git://github.com/wireapp/cryptobox.git

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs
    exposed-modules:  System.CryptoBox
    extra-libraries:  cryptobox
    build-depends:
          base                 >= 4.5   && < 5.0
        , bytestring           >= 0.10  && < 1.0
        , hashable             >= 1.2   && < 2.0
        , unordered-containers >= 0.2.5 && < 1.0
